<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
   <PreferenceCategory android:title="@string/tools_setting_preference_help">
       <PreferenceScreen android:title="@string/tools_setting_preference_contact"
                        android:summary="@string/tools_setting_preference_mail">
           <intent 
                   android:action="android.intent.action.SENDTO"
                    android:data="mailto:577348032@qq.com"/>
       </PreferenceScreen>
      
   </PreferenceCategory>
    <PreferenceCategory android:title="@string/tools_setting_preference_about">
        <Preference
                android:title="@string/tools_setting_preference_author"
                android:summary="@string/tools_setting_preference_cw"
        />
        <Preference android:title="@string/tools_setting_preference_version"
                    android:summary="@string/tools_setting_preference_ver"/>
    </PreferenceCategory>
</PreferenceScreen>